# bfeedme

./: README.md  app.py  pyproject.toml
static/: styles.css
templates/: admin.html  index.html  success.html
